# Project-STAR

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  FIXME.md  FPGA_CODE_IMPROVEMENTS.md  JTAG-info.txt  Kconfig  LICENSE  Makefile  README.md  TODO.txt  Wiring.txt  add_file_header.sh  apply_clang_format.sh  check_and_update_kconfig.sh  compare_backups.sh  display_files_markdown.sh  format.sh  gdbinit  hardware_decision_tree.py  hardware_decision_tree.txt  logs.txt  more-items.txt  parse_markdown_and_replace.py  possible-gait_tasks.c.txt  possible-mpu6050_hal.c.txt  precommit.sh  sdkconfig.defaults  storage.txt
.gemini/: config.yaml  styleguide.md
basics/: README.md
basics/bh1750/: CMakeLists.txt
basics/blink-led-rs/: Cargo.toml
basics/ec11/: CMakeLists.txt
basics/hmc5883l/: CMakeLists.txt
basics/i2c-scanner/: CMakeLists.txt
basics/movement/: Makefile
basics/pca9685/: CMakeLists.txt
basics/qmc5883l/: CMakeLists.txt
basics/wifi-sta/: CMakeLists.txt
components/camera/: CMakeLists.txt
components/pstar_bus/: CMakeLists.txt  Kconfig  bus_config.c  bus_gpio.c  bus_i2c.c  bus_manager.c  bus_sdio.c  bus_spi.c  bus_types.c  bus_uart.c  pstar_bus_config.c  pstar_bus_gpio.c  pstar_bus_i2c.c  pstar_bus_manager.c  pstar_bus_sdio.c  pstar_bus_spi.c  pstar_bus_types.c  pstar_bus_uart.c
components/pstar_bus/include/: bus_common_types.h  bus_config.h  bus_event.h  bus_event_types.h  bus_function_types.h  bus_gpio.h  bus_i2c.h  bus_macros.h  bus_manager.h  bus_manager_types.h  bus_protocol_types.h  bus_sdio.h  bus_spi.h  bus_types.h  bus_uart.h  pstar_bus_common_types.h  pstar_bus_config.h  pstar_bus_event.h  pstar_bus_event_types.h  pstar_bus_function_types.h  pstar_bus_gpio.h  pstar_bus_i2c.h  pstar_bus_manager.h  pstar_bus_manager_fwd.h  pstar_bus_manager_types.h  pstar_bus_protocol_types.h  pstar_bus_sdio.h  pstar_bus_spi.h  pstar_bus_types.h  pstar_bus_uart.h
components/pstar_error_handler/: CMakeLists.txt  Kconfig  error_handler.c  pstar_error_handler.c
components/pstar_error_handler/include/: error_handler.h  error_handler_macros.h  error_handler_types.h  pstar_error_handler.h  pstar_error_handler_macros.h  pstar_error_handler_types.h
components/pstar_logger/: CMakeLists.txt  Kconfig  log_handler.c  log_storage.c  pstar_log_handler.c  pstar_log_storage.c
components/pstar_logger/include/: log_handler.h  log_macros.h  log_storage.h  log_types.h  pstar_log_handler.h  pstar_log_macros.h  pstar_log_storage.h  pstar_log_types.h
components/pstar_managers/: CMakeLists.txt  Kconfig  file_write_manager.c  pstar_file_write_manager.c  pstar_time_manager.c  time_manager.c
components/pstar_managers/include/: pstar_file_write_manager.h  pstar_time_manager.h
components/pstar_pin_validator/: CMakeLists.txt  Kconfig  pin_validator.c  pstar_pin_validator.c
components/pstar_pin_validator/include/: pin_validator.h  pstar_pin_validator.h
components/pstar_storage_hal/: CMakeLists.txt  Kconfig  pstar_storage_common.c  pstar_storage_hal.c  pstar_storage_sd_card_hal.c  pstar_storage_sdio_hal.c  pstar_storage_spi_hal.c
components/pstar_storage_hal/fsm_visualization/: sd_card_state_machine_mealy.py
components/pstar_storage_hal/include/: pstar_storage_common.h  pstar_storage_hal.h  pstar_storage_sdio_hal.h  pstar_storage_spi_hal.h  pstar_storage_types.h
components/pstar_storage_hal/sd_card_hal/: pstar_sd_card_hal.c  sd_card_hal.c
components/pstar_storage_hal/sd_card_hal/include/: pstar_sd_card_hal.h  pstar_sd_card_types.h  sd_card_hal.h  sd_card_types.h
components/sensors/: CMakeLists.txt  SENSOR_IMPROVEMENT_TEMPLATE.md  common_sensor_setup.c
components/sensors/bh1750/: CMakeLists.txt  bh1750.c
components/sensors/bh1750/include/: bh1750.h
components/sensors/bh1750_hal/: BH1750_IMPROVEMENTS.md  CMakeLists.txt  bh1750_hal.c
components/sensors/bh1750_hal/include/: bh1750_hal.h
components/sensors/ccs811_hal/: CCS811_IMPROVEMENTS.md  ccs811_hal.c
components/sensors/ccs811_hal/include/: ccs811_hal.h
components/sensors/dht22_hal/: CMakeLists.txt  DHT22_IMPROVEMENTS.md  dht22_hal.c
components/sensors/dht22_hal/include/: dht22_hal.h
components/sensors/gy_neo6mv2_hal/: CMakeLists.txt  GY_NEO6MV2_IMPROVEMENTS.md  gy_neo6mv2_hal.c
components/sensors/gy_neo6mv2_hal/include/: gy_neo6mv2_hal.h
components/sensors/include/: common_sensor_setup.h  sensor_hal.h
components/sensors/mpu6050_hal/: CMakeLists.txt  MPU6050_IMPROVEMENTS.md  mpu6050_hal.c
components/sensors/mpu6050_hal/include/: mpu6050_hal.h
components/sensors/mq135_hal/: MQ135_IMPROVEMENTS.md  mq135_hal.c
components/sensors/mq135_hal/include/: mq135_hal.h
components/sensors/qmc5883l_hal/: CMakeLists.txt  QMC5883L_IMPROVEMENTS.md  qmc5883l_hal.c
components/sensors/qmc5883l_hal/include/: qmc5883l_hal.h
fpga_cam/: DE10_LITE_Golden_Top.v  DRAMControl.v  buffCapControl.v  dataRegistering.v  lineBuffer.v  refCLKPLL.v  testBench.v  vgaGen.v
main/: CMakeLists.txt  Kconfig.projbuild  gait_movement.c  hexapod_geometry.c  main.c  system_error_handler.c  system_setup.c
main/include/: CMakeLists.txt  gait_movement.h  hexapod_geometry.h  system_error_handler.h  system_setup.h  webserver_info.txt  wifi_credentials.txt
main/include/managers/: file_write_manager.c  time_manager.c
main/include/managers/include/: file_write_manager.h  time_manager.h
main/include/tasks/: gait_tasks.c  motor_tasks.c  sensor_tasks.c  system_tasks.c  webserver_tasks.c  wifi_tasks.c
main/include/tasks/include/: gait_movement.h  gait_tasks.h  motor_tasks.h  sensor_tasks.h  system_tasks.h  webserver_info.txt  webserver_tasks.h  wifi_credentials.txt  wifi_tasks.h
main/include/tasks/include/private/: wrapper_cleanup.h  wrapper_functions.h
main/include/tasks/private/: wrapper_cleanup.c  wrapper_functions.c
main/pstar_managers/: CMakeLists.txt  file_write_manager.c  time_manager.c
main/pstar_managers/include/: file_write_manager.h  time_manager.h
project-star-server/: go.mod  main.go
pstar_examples/: CMakeLists.txt  bh1750_example.c  jtag_example.c  pca9685_example.c  pstar_examples.c
(+124 files in other folders)
